# NewDanmakuBench

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/net/dixq/ryujinrokumobile/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Define.h  GameScene.cpp  Scene.cpp  ScenePrmBase.cpp  ScenePrmBase.h  Utils.cpp  native-lib.cpp
app/src/main/java/net/dixq/ryujinrokumobile/: GameActivity.kt  MainActivity.java  MenuActivity.kt  RankingActivity.kt
app/src/main/java/net/dixq/ryujinrokumobile/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/net/dixq/ryujinrokumobile/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
